--- a/app/package.json
+++ b/app/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && cp -r ./dist ../plugin/car_builder",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-multi-step-form": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
